Project

General

Profile

Actions

Bug #37929

closed

MDSMonitor: missing osdmon writeable check

Added by Patrick Donnelly over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Urgent
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
task(easy)
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #37988: mimic: MDSMonitor: missing osdmon writeable checkResolvedPrashant DActions
Copied to CephFS - Backport #37989: luminous: MDSMonitor: missing osdmon writeable checkResolvedPrashant DActions
Actions #1

Updated by Patrick Donnelly over 5 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 25974
Actions #2

Updated by Patrick Donnelly over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37988: mimic: MDSMonitor: missing osdmon writeable check added
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37989: luminous: MDSMonitor: missing osdmon writeable check added
Actions #5

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF