MDSMonitor: add missing OSDMonitor writeable check

Fixes: http://tracker.ceph.com/issues/37929

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>